package store;

public class Invoice {
}
