@startuml

' Klasa bazowa dla różnych rodzajów produktów
abstract class Product {
    - productID: int
    - name: String
    - price: double
    - quantity: int
    - brand: String
    + getDetails(): String
    + updateQuantity(quantity: int): void
    + getBrand(): String
}


' Konkretne typy produktów dziedziczące po Product
class Phone extends Product {
    - model: String
    - screenSize: double
    + getModel(): String
}

class Laptop extends Product {
    - processor: String
    - ramSize: int
    + getProcessor(): String
}

class Tablet extends Product {
    - screenSize: double
    - storage: int
    + getStorage(): int
}

' Klasa reprezentująca klienta
class Customer {
    - customerID: int
    - name: String
    - email: String
    - address: Address
    + addToOrder(product: Product): void
    + removeFromOrder(product: Product): void
    + viewOrder(): List<Product>
    + placeOrder(): Order
    + updateAddress(address: Address): void
}

' Klasa reprezentująca zamówienie
class Order {
    - orderID: int
    - customer: Customer
    - products: List<Product>
    - totalAmount: double
    - date: Date
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + calculateTotal(): double
}

' Klasa reprezentująca fakturę
class Invoice {
    - invoiceID: int
    - order: Order
    - totalAmount: double
    - date: Date
    + generateInvoice(): String
}

' Klasa reprezentująca adres klienta
class Address {
    - street: String
    - city: String
    - postalCode: String
    - country: String
}

' Klasa reprezentująca magazyn (Inventory)
class Inventory {
    - products: List<Product>
    + addProduct(product: Product): void
    + removeProduct(product: Product): void
    + getAllProducts(): List<Product>
}

' Relacje
Customer "1" o-- "0..*" Order : places
Order "1" o-- "0..*" Product : contains
Order "1" o-- "1" Invoice : has
Customer "1" *-- "1" Address : has
Inventory "1" o-- "0..*" Product : contains

@enduml
